--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "psr/container": "2.*",
         "ext-readline": "*",
         "ext-json": "*",
-        "ufo-cms/colored_cli": "^1.0"
+        "ufo-cms/colored_cli": "^1.0",
+      "ext-pdo": "*"
     },
     "license": "MIT",
     "autoload": {
